--- a/src/styles.css
+++ b/src/styles.css
@@ -67,7 +67,12 @@ h6 {
   isolation: isolate;
 }
 
-body { 
+:root {
+  --sea-green: #0b486b;
+  --ecstasy: #f56217;
+}
+
+body {
   flex-direction: column;
   display: flex;
   justify-content: center;
@@ -81,6 +86,37 @@ body {
   border-radius: 8px;
   height: 338px;
   width: 450px;
+  background-color: white;
+  opacity: 0.8;
+}
+
+.forecast {
+  margin-top: 10px;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+  padding-left: 0px;
+}
+
+li {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background-color: white;
+  opacity: 0.8;
+  width: 86px;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+input {
+  opacity: 0.8;
 }
 
 h3 {
@@ -89,8 +125,54 @@ h3 {
 
 .card-main {
   height: 60%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .card-bottom {
   height: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
+.gradient {
+  background: var(--sea-green);
+  background: linear-gradient(to right, var(--sea-green), var(--ecstasy));
+}
+
+#main-icon {
+  width: 40%;
+}
+
+#temp {
+  flex: 2;
+  text-align: center;
+  font-size: 60px;
+}
+
+h4 {
+  text-align: center;
+}
+
+.tempcontainer {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+.forecast-img {
+  height: 30px;
+  width: 30px;
+}
+
+.forecast-container {
+  font-size: 12px;
+  margin-top: 10px;
+}
+
+
