--- a/src/styles.css
+++ b/src/styles.css
@@ -72,12 +72,29 @@ h6 {
   --ecstasy: #f56217;
 }
 
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../fonts/Montserrat-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../fonts/Montserrat-Bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
+
 body {
   flex-direction: column;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 .card {
   margin-top: 20px;
@@ -121,6 +138,7 @@ input {
 
 h3 {
   text-align: center;
+  font-weight: 700;
 }
 
 .card-main {
@@ -155,6 +173,7 @@ h3 {
 
 h4 {
   text-align: center;
+  font-weight: 700;
 }
 
 .tempcontainer {
@@ -171,8 +190,12 @@ h4 {
 }
 
 .forecast-container {
-  font-size: 12px;
+  font-size: 10px;
   margin-top: 10px;
+}
+
+h5 {
+  font-weight: 700;
 }
 
 
